--- a/manifest.json
+++ b/manifest.json
@@ -62,10 +62,10 @@
   ],
   "shortcuts": [
     {
-      "name": "Oracle Cards",
+      "name": "Oracle Cards Reading",
       "short_name": "Oracle",
-      "description": "Divine guidance through sacred Oracle Cards",
-      "url": "/sections/spiritual-tools.html#oracle-cards",
+      "description": "Divine guidance through sacred Oracle Cards with premium animations",
+      "url": "/members-new.html#oracle-divination",
       "icons": [
         {
           "src": "icons/oracle-shortcut-96.png",
@@ -74,22 +74,10 @@
       ]
     },
     {
-      "name": "Member Portal",
-      "short_name": "Portal",
-      "description": "Access your spiritual journey dashboard",
-      "url": "/members-new.html",
-      "icons": [
-        {
-          "src": "icons/portal-shortcut-96.png",
-          "sizes": "96x96"
-        }
-      ]
-    },
-    {
-      "name": "Meditation",
+      "name": "Meditation & Mindfulness",
       "short_name": "Meditate",
-      "description": "Guided meditation and mindfulness practices",
-      "url": "/sections/meditation-corner.html",
+      "description": "Immersive breathing animations and ambient meditation",
+      "url": "/members-new.html#meditation-mindfulness",
       "icons": [
         {
           "src": "icons/meditation-shortcut-96.png",
@@ -98,13 +86,49 @@
       ]
     },
     {
-      "name": "Daily Practice",
-      "short_name": "Practice",
-      "description": "Your daily spiritual practice and affirmations",
-      "url": "/sections/spiritual-tools.html#daily-practice",
+      "name": "Energy Healing",
+      "short_name": "Healing",
+      "description": "Chakra balancing and crystal resonance healing",
+      "url": "/members-new.html#energy-healing",
       "icons": [
         {
-          "src": "icons/practice-shortcut-96.png",
+          "src": "icons/healing-shortcut-96.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Sacred Arts & Sound",
+      "short_name": "Arts",
+      "description": "Creative expression with sound visualizations",
+      "url": "/members-new.html#sacred-arts-sound",
+      "icons": [
+        {
+          "src": "icons/arts-shortcut-96.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Spiritual Growth",
+      "short_name": "Growth",
+      "description": "Track your devotional journey and progress",
+      "url": "/members-new.html#devotion-growth",
+      "icons": [
+        {
+          "src": "icons/growth-shortcut-96.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Advanced Practices",
+      "short_name": "Advanced",
+      "description": "Master-level spiritual techniques and consciousness work",
+      "url": "/members-new.html#advanced-practices",
+      "icons": [
+        {
+          "src": "icons/advanced-shortcut-96.png",
           "sizes": "96x96"
         }
       ]
