--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Divine Temple - Eden Consciousness",
+  "name": "Divine Temple - Complete Spiritual Awakening Platform",
   "short_name": "Divine Temple",
-  "description": "Transform your consciousness and remember your divine nature through sacred practices, Oracle Cards, and spiritual guidance.",
+  "description": "Transform your consciousness through sacred practices, consciousness trivia, singing bowl meditations, divine guidance, and esoteric wisdom. Complete offline spiritual platform.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0A0E27",
@@ -9,7 +9,7 @@
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en",
-  "categories": ["spirituality", "wellness", "education"],
+  "categories": ["spirituality", "wellness", "education", "lifestyle"],
   "icons": [
     {
       "src": "icons/temple-icon-72.png",
