Update Firebase configuration, functions, and add phase2 resources

--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,18 @@
 {
   "functions": [
     {
-      "source": "functions",
       "codebase": "default",
       "ignore": [
         "node_modules",
         ".git",
         "firebase-debug.log",
-        "firebase-debug.*.log"
+        "firebase-debug.*.log",
+        "*.local"
       ],
       "predeploy": [
         "npm --prefix \"$RESOURCE_DIR\" run lint"
-      ]
+      ],
+      "source": "functions"
     }
   ],
   "hosting": {
@@ -61,4 +62,17 @@
     },
     "singleProjectMode": true
   }
+,
+"functions": [
+  {
+    "source": "functions",
+    "codebase": "default",
+    "ignore": [
+      "node_modules",
+      ".git",
+      "firebase-debug.log",
+      "firebase-debug.*.log"
+    ]
+  }
+]
 }
