--- a/functions/package.json
+++ b/functions/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "divine-temple-functions",
-  "description": "Firebase Cloud Functions for Divine Temple",
-  "version": "1.0.0",
+  "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "logs": "firebase functions:log",
-    "deploy": "firebase deploy --only functions"
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "22"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
-    "node-fetch": "^2.6.7"
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^6.0.1",
+    "stripe": "^19.3.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
